force-app/main/default/objects/Grant_Notes__c/Grant_Notes__c.object-meta.xml
<CustomObject>
    <label>Grant Notes</label>
    <nameField>
        <displayFormat>GN-{0000}</displayFormat>
        <label>Grant Notes No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>