force-app/main/default/objects/Grant_Notes__c/fields/Enter_a_Note__c.field-meta.xml
<CustomField>
    <fullName>Enter_a_Note__c</fullName>
    <label>Enter a Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>