force-app/main/default/objects/Grant_Notes__c/fields/Grants__c.field-meta.xml
<CustomField>
    <fullName>Grants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grants</label>
    <referenceTo>Grants__c</referenceTo>
    <relationshipLabel>Grant Notes</relationshipLabel>
    <relationshipName>Grant_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>